--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "new-portfolio",
   "version": "0.0.0",
   "scripts": {
-    "build": "webpack --config ./webpack.dev.js"
+    "build": "webpack --config ./webpack.dev.js",
+    "serve": "node node_modules/serve/bin/serve.js",
+    "prettier:base": "prettier --parser typescript --single-quote",
+    "format": "npm run prettier:base -- --write \"src/**/*.{ts,tsx}\""
   },
   "repository": {
     "type": "git",
@@ -11,6 +14,8 @@
   "author": "Fred Choi",
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
+    "prettier": "1.18.2",
+    "serve": "^11.1.0",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^5.3.0",
     "ts-node": "^7.0.1",
