--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "react-markdown": "^4.1.0"
   }
 }
