--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Fred Choi",
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
+    "minimist": "^1.2.0",
     "prettier": "1.18.2",
     "serve": "^11.1.0",
     "source-map-loader": "^0.2.4",
