--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "typescript": "^3.1.6",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.7.2",
+    "yaml-front-matter": "^4.0.0"
   },
   "dependencies": {
     "@types/react": "^16.7.6",
