--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby"
   ],
   "scripts": {
+    "format": "prettier --write \"./**/*.{ts,tsx,js,jsx,json}\"",
     "develop": "gatsby develop",
     "start": "gatsby develop",
     "prebuild": "rm -rf docs",
@@ -18,7 +19,9 @@
   },
   "dependencies": {
     "gatsby": "^3.0.0",
+    "prettier": "^2.2.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "typescript": "^4.2.2"
   }
 }
