--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@fontsource/roboto": "^4.5.5",
+    "@fontsource/metropolis": "^4.5.3",
     "@mdx-js/mdx": "^2.1.1",
     "@mdx-js/react": "^2.1.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
+    "@mui/system": "^5.6.4",
     "gatsby": "^4.13.1",
     "gatsby-plugin-manifest": "^4.13.0",
-    "gatsby-plugin-mdx": "^3.13.0",
     "gatsby-source-filesystem": "^4.13.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
