--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
     "@mui/system": "^5.6.4",
+    "css": "^3.0.0",
     "gatsby": "^4.13.1",
     "gatsby-plugin-manifest": "^4.13.0",
     "gatsby-source-filesystem": "^4.13.0",
+    "node-fetch": "2",
+    "node-html-parser": "^5.3.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
+    "@types/css": "^0.0.33",
     "@types/node": "^17.0.31",
+    "@types/node-fetch": "^2.6.1",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
     "typescript": "^4.6.4"
